# DiRect

./: .gitignore  CMakeLists.txt  README.md  gen.bat  p20_grish_direct.pl  p21_gcgen_direct.pl
DiRect/: DiRect.sln
DiRect/DiRect/: DiRect.vcxproj  DiRect.vcxproj.filters
DiRect10/: DiRect10.sln
DiRect10/DiRect10/: DiRect10.vcxproj
Grishagin/: CMakeLists.txt  grishagin_conf.xml  grishagin_function.cpp  grishagin_function.h  grishagin_problem.cpp  grishagin_problem.h
Rastrigin2/: CMakeLists.txt  rastrigin_problem.cpp  rastrigin_problem.h
f/: libgenopt-win32lf.lib
src/: common.h  defines.h  direct-uses-case.cpp  directPM.cpp  genopt.h  problem_interface.h  problem_manager.cpp  problem_manager.h  tstc.c
src/parameters/: baseParameters.h  property.h  types.h
